--- a/src/pages/projects/projects.module.scss
+++ b/src/pages/projects/projects.module.scss
@@ -1,3 +1,5 @@
+@import "../../colors";
+
 .list {
     padding: 10px;
     display: flex;
@@ -12,7 +14,7 @@
     margin: 10px;
     padding: 25px 30px;
     background-color: #F6F5FF;
-    color: #51459E;
+    color: $sub-general-color;
 
     transition: all .2s;
 
