--- a/src/components/project/task.module.scss
+++ b/src/components/project/task.module.scss
@@ -1,11 +1,11 @@
-@import "./../../colors";
+@import "./../../base";
 
-.task {
+// styles for task item
+.small-task {
     display: flex;
     justify-content: space-between;
-    padding: 5px 15px;
+    padding: 10px 15px;
     width: 100%;
-    height: 100px;
     margin: 10px 20px;
     border-radius: 5px;
     color: $sub-general-color;
@@ -22,28 +22,34 @@
     &.done {
         background-color: $done-color;
     }
+
+    span {
+        margin: 0 10px;
+    }
 }
 
 .label {
     display: block;
-    font-size: 30px;
+    font-size: $pc-font-general;
     font-weight: 500;
 }
 
-.description {
+.small-description {
     display: block;
-    font-size: 16px;
+    font-size: $pc-font-sub;
     margin-top: 5px;
-    word-break: break-all;
+    word-break: keep-all;
 }
+
+// styles for general view of task
 
 .modal-view {
     position: absolute;
     top: 0;
     left: 0;
     background-color: rgba($sub-general-color, .4);
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
 
     &.hidden {
         display: none;
@@ -52,4 +58,69 @@
     &.shown {
         display: block;
     }
+}
+
+.task {
+    display: flex;
+    justify-content: space-between;
+    position: absolute;
+    background-color: $sub-general-color;
+    top: 50%;
+    left: 50%;
+    width: 85%;
+    height: 80%;
+    transform: translate(-50%, -50%);
+    padding: 25px;
+    color: $general-color;
+    border-radius: 5px;
+}
+
+.text {
+    flex: 1 0 0;
+    padding: 0 25px;
+    width: auto;
+}
+
+.info {
+    display: flex;
+    flex-direction: column;
+    flex: 0 1 300px;
+    height: 100px;
+    user-select: none;
+
+    span:not(:first-child) {
+        font-size: $pc-font-sub;
+        margin: 10px 0;
+    }
+
+    .files {
+        margin-top: 20px;
+    }
+}
+
+.heading {
+    margin-left: 25px;
+    font-size: $pc-font-general + 5px;
+    font-weight: 500;
+}
+
+.description {
+    margin-top: 10px;
+    word-break: keep-all;
+    text-indent: 25px;
+
+    span {
+        font-size: $pc-font-sub;
+    }
+}
+
+.date {
+    margin-left: 25px;
+    user-select: none;
+}
+
+.buttons {
+    position: absolute;
+    bottom: 25px;
+    right: 25px;
 }
