done with saving
it remains to make comments and editing

--- a/src/_base.scss
+++ b/src/_base.scss
@@ -8,6 +8,8 @@ $general-color: #FFFFFF;
 $sub-general-color: #51459E;
 $third-general-color: #84E8F4;
 
+$danger-color: #FF1D58;
+
 // размеры шрифтов
 
 // // для ПК
