--- a/src/components/UI/ui.module.scss
+++ b/src/components/UI/ui.module.scss
@@ -5,7 +5,7 @@
     border-radius: 5px;
     padding: 10px 15px;
     margin: 10px;
-    font-size: $pc-font-sub;
+    font-size: $pc-font-min;
     cursor: pointer;
 
 
@@ -26,7 +26,7 @@
             background-color: $third-general-color;
         }
 
-        &:active {
+        &:enabled:active {
             background-color: rgba($general-color, .1);
             color: $general-color;
         }
@@ -41,4 +41,12 @@
         }
     }
 
+    &:disabled {
+        cursor: default;
+        background-color: rgba($general-color, .6);
+
+        &:hover {
+            background-color: rgba($general-color, .6);
+        }
+    }
 }
