--- a/src/components/project/task.module.scss
+++ b/src/components/project/task.module.scss
@@ -46,6 +46,7 @@
     font-size: $pc-font-general;
     font-weight: 500;
     margin-bottom: 15px;
+    user-select: none;
 }
 
 .small-description {
@@ -106,18 +107,20 @@
     height: 100px;
     user-select: none;
 
-    span:not(:first-child) {
-        font-size: $pc-font-min;
-        margin: 10px 0;
-    }
-
     .files {
         margin-top: 20px;
     }
 }
 
+.info-item {
+    font-size: $pc-font-min;
+    margin: 10px 0;
+    display: flex;
+    align-items: center;
+}
+
 .heading {
-    margin-left: 20px;
+    margin-left: 5px;
     font-weight: 500;
 }
 
@@ -141,7 +144,7 @@
 }
 
 .date {
-    margin-left: 30px;
+    margin-left: 20px;
     user-select: none;
 }
 
